# tg-mono-repo

./: .gitignore  IMPLEMENTATION.md  README.md  SELLER_PLATFORM_RESTORE.md  SETUP.md
backend/: .env.example  .gitignore  CLEANUP_SUMMARY.md  COMPLETION_CHECKLIST.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  example_integration.py  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/.github/agents/: backend-agent-instructions.md  frontend-agent-instructions.md  instructions.md
backend/app/: __init__.py  __main__.py  auth.py  bot_api.py  cli.py  database.py  main.py  manager.py  models.py  response_models.py  scheduler.py  seller_models.py  seller_service.py  service.py  stripe_service.py  timezone_utils.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  health.py  sellers.py  telegram.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/models/: __init__.py  seller.py  telegram.py
backend/app/services/: __init__.py  bot_api.py  database.py  scheduler.py  seller_service.py  stripe_service.py  telegram_service.py
backend/config/: __init__.py  settings.py
backend/docs/: GIT_HOOKS.md  api.md  setup.md  user-guide.md
backend/logs/: CHANGELOG.md
backend/routers/: __init__.py  payments.py  sellers.py  telegram.py
backend/scripts/: install_hooks.py  pre-commit-hook.sh  pre_push_check.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_endpoints.py  test_integration.py  test_models.py  test_seller.py  test_services.py  test_timezone_utils.py
frontend/: .env.example  eslint.config.js
frontend/src/lib/components/: Button.svelte  Navigation.svelte
frontend/src/lib/services/: api.ts  auth.service.ts
frontend/src/lib/utils/: navigation.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/channels/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/grant-access/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/members/: +page.svelte
frontend/src/routes/payments/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/settings/: +page.svelte
